--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ ext {
     junitVersion = '5.8.1'
 }
 
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = "13"
+targetCompatibility = "13"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
